--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <!-- TODO: Update og:title to match your application name -->
     <meta property="og:title" content="CMS Sales" />
     <meta property="og:description" content="Fiverr Sales Tracker" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:type" content="Sales" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@CMS" />
